Add AI email feature and deployment config