@@ -4,71 +4,48 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
 import org.springframework.web.cors.CorsConfiguration;
-
-import org.springframework.web.cors.CorsConfigurationSource;
-
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.List;
+import org.springframework.web.filter.CorsFilter;
+
+import java.util.Arrays;
 
 @Configuration
 public class CorsConfig {
 
     @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
+    public CorsFilter corsFilter() {
 
-        CorsConfiguration configuration =
-                new CorsConfiguration();
+        CorsConfiguration config = new CorsConfiguration();
 
-        configuration.setAllowedOrigins(
+        config.setAllowCredentials(true);
 
-                List.of(
-
-                        "http://localhost:5174"
-
+        config.setAllowedOrigins(
+                Arrays.asList(
+                        "http://localhost:5173"
                 )
-
         );
 
-        configuration.setAllowedMethods(
+        config.setAllowedHeaders(
+                Arrays.asList("*")
+        );
 
-                List.of(
-
+        config.setAllowedMethods(
+                Arrays.asList(
                         "GET",
                         "POST",
                         "PUT",
                         "DELETE",
                         "OPTIONS"
-
                 )
-
         );
-
-        configuration.setAllowedHeaders(
-
-                List.of("*")
-
-        );
-
-        configuration.setAllowCredentials(true);
-
 
         UrlBasedCorsConfigurationSource source =
-
                 new UrlBasedCorsConfigurationSource();
 
+        source.registerCorsConfiguration("/**", config);
 
-        source.registerCorsConfiguration(
-
-                "/**",
-
-                configuration
-
-        );
-
-
-        return source;
-
+        return new CorsFilter(source);
     }
 
 }
